Fix z-index

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -2149,7 +2149,7 @@ div#token-distribution .col-md-10.token-info-table{
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
+  z-index: 10000;
   box-shadow: 2px 8px 16px 0 rgba(46, 61, 73, 0.2);
   a, p{
     color:#fff;
